--- a/.github/workflows/check-for-changes.yml
+++ b/.github/workflows/check-for-changes.yml
@@ -3,6 +3,8 @@ name: Check differences
 
 on:
   issue_comment:
+    types:
+      - created
 
 jobs:
   validate:
@@ -10,18 +12,24 @@ jobs:
     steps:
       - name: Dump GitHub context
         env:
-          GITHUB_CONTEXT: ${{ toJSON(github.event.issue.pull_request) }}
+          GITHUB_CONTEXT: ${{ toJSON(github.event.issue.pull_request.url) }}
         run: echo "$GITHUB_CONTEXT"
+        
+      - name: "Get PR's branch name"
+        id: get_branch
+        run: |
+          PR=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" ${{ github.event.issue.pull_request.url }})
+          echo $PR | jq -r '.head.ref'
 
       - name: 🛎 Checkout repo
         uses: actions/checkout@v3
         with:
-          ref: ${{  github.event.pull_request.head.sha }}
+          ref: ${{  github.event.pull_request.url.head.sha }}
 
       - name: 📌 Filter changed projects
         uses: dorny/paths-filter@v2
         with:
-          base: ${{  github.event.pull_request.head.sha }}
+          base: ${{  github.event.pull_request.url.head.sha }}
           filters: |
             changes:
             - './**'
