--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -10,4 +10,7 @@ jobs:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJSON(github) }}
-        run: echo "$GITHUB_CONTEXT"
+        run: |
+          echo "$GITHUB_CONTEXT"
+          echo ${{ github.event_name }}
+          echo ${{ github.event.user.login }}
