--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -2,7 +2,7 @@ name: Check context
 on:
   issue_comment:
   pull_request:
-# comment
+  
 jobs:
   one:
     runs-on: ubuntu-latest
@@ -13,4 +13,4 @@ jobs:
         run: |
           echo "$GITHUB_CONTEXT"
           echo ${{ github.event_name }}
-          echo ${{ github.event.user.login }}
+          echo ${{ github.event.user }}
