--- a/.github/workflows/check-for-changes.yml
+++ b/.github/workflows/check-for-changes.yml
@@ -16,9 +16,9 @@ jobs:
         id: ref
         run: |
           PR=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" ${{ github.event.issue.pull_request.url }})
-          echo "sha=$(PR | jq -r '.head.sha')" >> $GITHUB_OUTPUT
-          echo $(PR | jq -r '.head.sha')
-          echo $(PR | jq -r '.head.ref')
+          echo "sha=$(echo $PR | jq -r '.head.sha')" >> $GITHUB_OUTPUT
+          echo $PR | jq -r '.head.sha'
+          echo $PR | jq -r '.head.ref'
 
       - name: 🛎 Checkout repo
         uses: actions/checkout@v4
