--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ steps.branch.outputs.sha }}
-          token: ${{ GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 🐍 Setting Python
         uses: actions/setup-python@v4
